2004-06-07  Chad Fowler  <chad@chadfowler.com>
    * lib/rubygems/remote_installer.rb, lib/rubygems/version.rb: Fixed old dependency on #version method for Gem::Version::Requirement
    * bin/gem: new --upgrade-dist option allows one to upgrade every installed gem

2004-06-06  Chad Fowler  <chad@chadfowler.com>
    * bin/gem: install_stub is once again the default due to requests.

2004-06-04  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/specification.rb, lib/rubygems/doc_manager.rb:  
	Allow arbitrary files to be added for rdoc to run over them (as per
	Jim's request).

2004-06-04  Chad Fowler  <chad@chadfowler.com>
	* bin/gem:  Reformatted --search and --list output such that
	multiple versions of a gem are compressed into a single entry
	(with version numbers in parentheses)

2004-05-31  Jim Weirich  <jweirich@one.net>

	* lib/rubygems/version.rb (Gem::Dependency): Dependency attribute
	renamed to version_requirements (made plural).
	(Gem::Version::bump): Added bump to implement pessimistic
	operator.
	(Gem::Version::Requirement): Added pessimistic operator to list of
	operators. Operators now implemented using lambda.

	* lib/rubygems.rb (Kernel::require_gem): require_gem now takes an
	array of requirement strings.

	* lib/rubygems/version.rb (Gem::Version::Requirement::initialize):
	Simplified initialization by making parse a bit smarter.
	(Gem::Version::Requirement::satisfied_by): Simplified by using
	all?
	(Gem::Version::Requirement::satisfy): Added explicit one
	requirement satisfy test.
	(Gem::Version::Requirement::parse): parse now returns a two
	element string array (operator and version string).  We don't
	bother converting to an integer array during parsing.

2004-05-31 18:38 chadfowler

	* gemspec now supports #rdoc_options, to which you can append
	strings that will be passed to rdoc as additional options.

2004-05-08 21:57  chadfowler

	* Using Gem::RubyGemsVersion to match the release number.  If we